fix: Change the UI to have better uI experience

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: #0a0401; overflow: hidden">
+<html lang="en" style="background-color: #0a0401">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/leo-site.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Leo Lam Portfolio" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/leo-site.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
